test/fail/heap_ovflow01.v3
//@execute = !HeapOverflow @ 4:23
component heap_ovflw01 {
	def main() -> bool {
		var a = Array<Array<int>>.new(1000000);
		for (i = 0; i < a.length; i++) {
			a(i) = Array<int>.new(a.length);
		}
		return true;
	}
}
